--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node app.js"
   },
+	"repository": {
+    "type": "git",
+    "url": "https://github.com/riotgameseurope/front-end-technical-exercise-api.git"
+  },
   "dependencies": {
     "express": "^4.16.4"
   }
